--- a/styles.css
+++ b/styles.css
@@ -166,13 +166,14 @@ body {
 .card {
   border: 1px dashed rgba(128, 128, 128, 0.5);
   background: #f4f4f4;
-  padding: 20px;
-  flex: 1 1 300px;
+  padding: 10px;
+  flex: 1 1 200px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .card h3 {
+  font-size: medium;
   color: #333;
   margin-bottom: 10px;
 }
